data/derived/comb/progs/unify/prog4219.ml.out
Characters 43-53:
  helpFac 10*a b;;
  ^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
